# vostok-1-frmwrk-vn-arduino

./: README.md  README.ru.md  boards.txt  package.json  platform.txt  programmers.txt
bootloaders/k1921vk01t/: CMakeLists.txt  clean.sh
bootloaders/k1921vk01t/app/: boot_conf.h  boot_core.c  boot_core.h  boot_flash.c  boot_flash.h  boot_packet.c  boot_packet.h  main.c
bootloaders/k1921vk01t/init/: enable_boot.cfg  program_boot.cfg
bootloaders/k1921vk028/: CMakeLists.txt
bootloaders/k1921vk028/app/: boot_conf.h  boot_core.c  boot_core.h  boot_flash.c  boot_flash.h  boot_packet.c  boot_packet.h  main.c
bootloaders/k1921vk028/init/: program_boot.cfg
bootloaders/k1921vk028/platform/Device/NIIET/K1921VK028/Source/GCC/: K1921VK028.ld
bootloaders/k1921vk035/: CMakeLists.txt  build_debug.sh  build_release.sh  gcc_cm4f.cmake
bootloaders/k1921vk035/app/: boot_conf.h  boot_core.c  boot_core.h  boot_flash.c  boot_flash.h  boot_packet.c  boot_packet.h  main.c
bootloaders/k1921vk035/init/: enable_boot.cfg  program_boot.cfg
cores/arduino/: Arduino.h  Print.h  Tone.cpp  Uart.cpp  Uart.h  WInterrupts.c  WVariant.h  bitFlip.c  bitFlip.h  dtostrf.c  gpio_irq_table.c  gpio_irq_table.h  hardware_libs.c  itoa.c  k1921vk_sdk.h  main.cpp  pin_alt_func_map.c  pin_alt_func_map.h  startup_script.S  system_init.c  wiring_analog.c  wiring_analog.cpp  wiring_analog.h  wiring_digital.c  wiring_digital.cpp  wiring_private.h  wiring_pulse.cpp  wiring_time.c
cores/arduino/framework-k1921vk-sdk/: .gitignore  RELEASE.md  package.json
doc/: Activate_JTAG.md  Activate_JTAG.ru.md
examples/ArduinoIDE/analogWrite_switchFreq/: analogWrite_switchFreq.ino
examples/Platformio/Blink/: platformio.ini
examples/Platformio/LCD/: platformio.ini
examples/Platformio/NewPing/: platformio.ini
examples/Platformio/SD_card/: platformio.ini
framework-k1921vk-sdk/: README.md
framework-k1921vk-sdk/platform/niietcm4_pd/: README.md  RELEASE.md
framework-k1921vk-sdk/tools/jlink/: README.md
libraries/SPI/: library.properties
libraries/SPI/src/: SPI.cpp  SPI.h
libraries/Servo/: library.properties
libraries/Servo/src/: Servo.cpp  Servo.h  ServoTimers.h
libraries/TimerOne/: library.properties  readme.md
libraries/TimerOne/src/: TimerOne.cpp  TimerOne.h
libraries/TimerZero/: keywords.txt  library.properties  readme.md
libraries/TimerZero/src/: TimerZero.cpp  TimerZero.h
libraries/Wire/: library.properties
libraries/Wire/src/: Wire.cpp  Wire.h
tools/openocd-snippets/generic/: mass_erase.cfg
tools/platformio/: platformio-build.py
variants/uno/: variant.cpp  variant.h
variants/vostok_mega_01t/: variant.cpp  variant.h
variants/vostok_mega_vn01t/: variant.cpp  variant.h
variants/vostok_uno_035/: variant.cpp  variant.h
variants/vostok_uno_vn035/: variant.cpp
variants/vostok_uno_vn035_revC/: variant.cpp
(+232 files in other folders)
